--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.2.4",
-		"thiagoalessio/tesseract_ocr": "^2.9"
+		"php": ">=5.2.4", 
+		"thiagoalessio/tesseract_ocr": "^2.9",
+		"ddeboer/tesseract": "1.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*"
+		 
 	}
 }
